--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,6 +8,7 @@
     "dev": "webpack --mode=development --watch"
   },
   "dependencies": {
+    "core-js": "^3.18.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
